created script for user`s settings side

--- a/style/components/PaintingSquare.css
+++ b/style/components/PaintingSquare.css
@@ -2,7 +2,6 @@
   .main_paint {
     width: 550px;
     height: 550px;
-    /* border: 1px solid white; */
     background-color: #fff;
     position: absolute;
     right: 35px;
@@ -10,6 +9,8 @@
     display: flex;
     flex-wrap: wrap;
     border-radius: 20px;
+  user-select: none;
+
   }
   
   .paintScuare {
