--- a/style/components/UserSide.css
+++ b/style/components/UserSide.css
@@ -1,10 +1,10 @@
 .user_bar {
-    width: 50%;
+    width: 53%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: start;
-    margin-top: 40px;
+    margin-top: 50px;
 }
 
 .userTitle {
@@ -19,7 +19,7 @@
     flex-direction: column;
     margin-top: 20px;
     align-items: center;
-    height: 400px;
+    height: 350px;
     justify-content: space-between;
 }
 
@@ -52,17 +52,17 @@ button:active {
     transition: 0.001s;
 }
 
-.rainbow_btn {
+.active {
     background-color: #ff1ea1db;
     border-color: #fff;
 }
 
-.rainbow_btn:hover {
+.active:hover {
     text-shadow: 0px 0px 3px #fff;
     box-shadow: 0px 0px 10px #fff, 0px 0px 15px #fff;
 }
 
-.rainbow_btn:active {
+.active:active {
     box-shadow: 0px 0px 10px #fff;
     background-color: #fe5487;
 }
@@ -122,4 +122,12 @@ button:active {
 .color_palette::-webkit-color-swatch-wrapper {
     -webkit-appearance: none;
     padding: 0px;
+}
+
+.userButtons {
+    display: flex;
+    flex-wrap: wrap;
+    width: 400px;
+    gap: 40px;
+    justify-content: center;
 }
