--- a/style/all.css
+++ b/style/all.css
@@ -17,7 +17,7 @@ body {
   width: 100%;
   height: 100vh;
   color: #fff;
-  background-image: url('https://wallpapers.com/images/featured/ultra-hd-wazf67lzyh5q7k32.jpg');
+  background-image: url(' /images/background.jpg');
   background-size: 100%;
   animation: backgroundGradient 9s infinite;
   background-repeat: no-repeat;
